[CHG] Moved the fix for the blank spaces in to the associated reports.

--- a/equitania/views/eq_footer.xml
+++ b/equitania/views/eq_footer.xml
@@ -47,6 +47,9 @@
 	            <tr>
 	                <td style="">
 						<h t-field="o.company_id.partner_id.street"/><span t-if="o.company_id.partner_id.eq_house_no"> <span t-field="o.company_id.partner_id.eq_house_no"/></span>
+						<div t-if="o.company_id.partner_id.street2">
+							<div t-field="o.company_id.partner_id.street2"/>
+						</div>
 	                </td>
 	                <td style="">
 	                    <div t-if="company.phone">
