--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -83,7 +83,7 @@
 <!-- 
 <template id="eq_report_picking_extension" inherit_id="stock.report_picking" active="True">
  -->
- <template id="stock.report_picking" active="True">
+<template id="stock.report_picking" active="True">
     <t t-call="report.html_container">
     <t t-foreach="docs" t-as="o">
 	<t t-call="equitania.external_layout_stock_picking">
@@ -105,8 +105,8 @@
 					<div t-if="o.picking_type_id.code=='outgoing' and o.partner_id" >
 						<div class="row col-xs-12 returnaddress">
 							<h t-field="o.company_id.partner_id.name"/> -
-						<h t-field="o.company_id.partner_id.street"/><span t-if="o.company_id.partner_id.eq_house_no"> <span t-field="o.company_id.partner_id.eq_house_no"/></span> -
-							<h t-field="o.company_id.partner_id.zip"/>
+						<h t-field="o.company_id.partner_id.street"/><span t-if="o.company_id.partner_id.eq_house_no"><h>&#xa0;</h><span t-field="o.company_id.partner_id.eq_house_no"/></span> -
+							<h t-field="o.company_id.partner_id.zip"/><h>&#xa0;</h>
 							<h t-field="o.company_id.partner_id.city"/>
 						</div>
 						<!--<span><strong>Customer Address:</strong></span>-->
@@ -121,7 +121,7 @@
 							<div t-field="o.partner_id.street2"/>
 						</div>
 						<h>
-							<h t-field="o.partner_id.zip"/>
+							<h t-field="o.partner_id.zip"/><h>&#xa0;</h>
 							<h t-field="o.partner_id.city"/>
 							<h t-if="o.partner_id.eq_citypart">-
 								<h t-field="o.partner_id.eq_citypart"/>
@@ -273,7 +273,7 @@
 										<div t-field="o.sale_id.partner_invoice_id.street2"/>
 									</div>
 									<h>
-										<h t-field="o.sale_id.partner_invoice_id.zip"/>
+										<h t-field="o.sale_id.partner_invoice_id.zip"/><h>&#xa0;</h>
 										<h t-field="o.sale_id.partner_invoice_id.city"/>
 										<h t-if="o.sale_id.partner_invoice_id.eq_citypart">-
 											<h t-field="o.sale_id.partner_invoice_id.eq_citypart"/>
