[FIX] Report Übersetzungen

--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -196,7 +196,7 @@
     						<strong>Seq</strong>
 						</th>
                         <th style="min-width:2.6cm;">
-    						<strong>Product</strong>
+    						<strong>Item no.</strong>
 						</th>
 						<th>
 							<strong>Item description</strong>
