[ADD] Added id for an td element in the sale.oder report.

--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -70,7 +70,7 @@
 		                    </td>
 		                </tr>
 		                <tr>
-		                    <td></td>
+		                    <td id="sale_header_placeholder"></td>
 		                </tr>
 		            </tbody>
 		        </table>
