--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -183,14 +183,14 @@
                                     <span t-field="o.user_id.eq_employee_id.eq_work_fax"/>
                                 </td>
                             </tr>
-                            <tr>
-                                <td>
-                                    <span>E-Mail</span>
-                                </td>
-                                <td class="text-right">
-                                    <span t-field="o.user_id.eq_employee_id.work_email"/>
-                                </td>
-                            </tr>
+  							<tr>
+								<td colspan="2">
+									<span>E-Mail</span>
+									<div style="float:right;">
+                                        <span t-field="o.user_id.eq_employee_id.work_email"/>
+                                    </div>
+								</td>
+							</tr>
                         </tbody>
                     </table>
                 </div>
