--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -149,7 +149,7 @@
 					</div>
 				</div>
 				<div class="col-xs-5">
-					<h style="line-height:3em" t-if="o.user_id.eq_employee_id">
+					<h class="contactpersonheader" t-if="o.user_id.eq_employee_id">
 						<strong>For further information, please contact</strong>
 					</h>
 					<table style="width:100%;" t-if="o.user_id.eq_employee_id">
