--- a/equitania/views/eq_report_style.xml
+++ b/equitania/views/eq_report_style.xml
@@ -5,7 +5,7 @@
      
     body {
         color: #000 !important;
-        font-size:9pt;
+        font-size:8pt;
     }
     
     .h2, h2 {
@@ -77,6 +77,8 @@
 		max-height:3.2cm;
 		float:right;
 	}
+
+	.contactpersonheader { margin-top:4mm; display:inline-block;}
 
     .addressmargin {
         margin-top:0.6cm;
