--- a/equitania/static/src/css/eq_style.css
+++ b/equitania/static/src/css/eq_style.css
@@ -8,7 +8,7 @@
 /* ==================================================
 Erweiterung für Template-Variablen ================Start */
 
-.eq_db_variant label:after{content:"V";color:#666;font-size:9px;padding:0 3px;height:18px;display:inline-block;border:1px solid #ddd;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;background:#fff}.eq_db_variant:hover label:after{content:"Variante" !important}
+label.eq_db_variant:after{content:"V";color:#666;font-size:9px;padding:0 3px;height:18px;display:inline-block;border:1px solid #ddd;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;background:#fff} label.eq_db_variant:hover:after{content:"Variante" !important}
 
 /* ==================================================
 Erweiterung für Template-Variablen ================Ende */
