[IMP] Reports: Referenzeinträge des Kunden können nun nurnoch 2 Zeilen in der Länge betragen (inkl. Umbruch im Report). Alles was zuviel ist, wird abgeschnitten, damit der Report korrekt angezeigt bleibt und die Anschrift nicht abgeschnitten wird.

--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -43,7 +43,7 @@
 									<span>Your reference no.</span>
 								</td>
 								<td class="text-right">
-									<span t-field="o.eq_ref_number" />
+									<div class="referencecontainer"><span t-field="o.eq_ref_number"/></div>
 								</td>
 							</tr>
 							<tr>
