--- a/equitania/views/eq_portal_sale_data.xml
+++ b/equitania/views/eq_portal_sale_data.xml
@@ -17,7 +17,12 @@
             <field name="user_signature" eval="True"/>
             <field name="body_html"><![CDATA[
 <div style="font-family: 'Lucica Grande', Ubuntu, Arial, Verdana, sans-serif; font-size: 12px; color: rgb(34, 34, 34); background-color: rgb(255, 255, 255); ">
-    <p>Hello ${object.partner_id.title.name} ${object.partner_id.name},</p>    
+	% if object.partner_id.is_company:
+		<p>Ladies and Gentlemen,</p>    	
+    % endif
+    % if object.partner_id.is_company == False:
+    	<p>Hello ${object.partner_id.title.name} ${object.partner_id.name},</p>
+    % endif        	       
     <p>
      ${object.state in ('draft', 'sent') and 'we have received your request and will contact you immediately because of the order confirmation.' or 'we hereby confirm the following orde.'}
     </p>       
