--- a/equitania/views/eq_portal_sale_data.xml
+++ b/equitania/views/eq_portal_sale_data.xml
@@ -11,14 +11,16 @@
             <field name="partner_to">${object.partner_invoice_id.id}</field>
             <field name="model_id" ref="sale.model_sale_order"/>
             <field name="auto_delete" eval="True"/>
+            <!-- 
             <field name="report_template" ref="sale.report_sale_order"/>
             <field name="report_name">${(object.name or '').replace('/','_')}_${object.state == 'draft' and 'draft' or ''}</field>
+             -->
             <field name="lang">${object.partner_id.lang}</field>
             <field name="user_signature" eval="True"/>
             <field name="body_html"><![CDATA[
 <div style="font-family: 'Lucica Grande', Ubuntu, Arial, Verdana, sans-serif; font-size: 12px; color: rgb(34, 34, 34); background-color: rgb(255, 255, 255); ">
 	% if object.partner_id.is_company:
-		<p>Ladies and Gentlemen,</p>    	
+		<p>Dear Ladies and Gentlemen,</p>    	
     % endif
     % if object.partner_id.is_company == False:
     	<p>Dear ${object.partner_id.title.name} ${object.partner_id.name},</p>
