--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -3,7 +3,7 @@
 	<!-- header -->
 	<template id="eq_external_layout_header_invoice">
 	    <div class="header">
-	        <div class="row zero_min_height">
+	        <div class="row zero_min_height reportlogo">
 	            <div>
 	                <img t-if="company.eq_report_logo" t-att-src="'data:image/png;base64,%s' % company.eq_report_logo" style="margin-right:15px; float:right;" class="text-right"/>
 	                <!--<img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 2cm; margin-right:0.25cm; float:right;" class="text-right"/>-->
