--- a/eq_plain_reports/views/report_invoice_plain.xml
+++ b/eq_plain_reports/views/report_invoice_plain.xml
@@ -5,9 +5,9 @@
 
 		<template id="external_layout_header_plain">
 			<div class="header">
-				<div class="row zero_min_height reportlogo" style="background-color:red;">
+				<div class="row zero_min_height reportlogo" style="">
 					<div>
-						 <div style="display:block; background-color:yellow; height:3.2cm;"><!-- <img t-if="company.eq_report_logo" t-att-src="'data:image/png;base64,%s' 
+						 <div style="display:block; height:3.2cm;"><!-- <img t-if="company.eq_report_logo" t-att-src="'data:image/png;base64,%s' 
 							% company.eq_report_logo" style="margin-right:15px; float:right;" class="text-right"/>--></div>
 						<!--<img t-if="company.logo" t-att-src="'data:image/png;base64,%s' 
 							% company.logo" style="max-height: 2cm; margin-right:0.25cm; float:right;" 
@@ -15,14 +15,14 @@
 					</div>
 				</div>
 				<t t-call="equitania.eq_external_layout_header_invoice_data"/>
-				<div class="row zero_min_height" style="background-color:blue;">
+				<div class="row zero_min_height" style="">
 					<t t-raw="0" />
 					<div class="col-xs-12">
 						<div style="font-size:6.5pt;text-decoration: underline;" />
 						<!--<div style="border-bottom: 1px solid black;"/> -->
 					</div>
 				</div>
-			<div class="returnaddressplain">inhalt</div>
+			<div class="returnaddressplain"></div>
 			</div>
 			<!-- <div class="header"> <span>mein neuer header</span> </div> -->
 		</template>
