--- a/eq_plain_reports/views/report_global_plain.xml
+++ b/eq_plain_reports/views/report_global_plain.xml
@@ -3,29 +3,27 @@
 	<data>
 		<template id="style_plain">
 			<style type="text/css">
-				div.addressmargin div.returnaddress { /*visibility:hidden; wird aktuell leider gerade global angewendet*/}
+				div.addressmargin div.returnaddress {
+				background-color:red; /*visibility:hidden; wird aktuell leider
+				gerade global angewendet*/}
 
 				.returnaddressplain {
 				font-size:5.5pt;
 				text-decoration: underline;
 				margin-bottom:0.2cm;
-				width: 35%; height:20px; position: fixed; margin-top: 20px;
+				width: 35%;
+				height:20px; position: fixed; margin-top: 20px;
 				}
 			</style>
 		</template>
 
-
-		<template id="layout" inherit_id="report.layout" primary="True">
+		<template id="html_container_plain">
+			<t t-call="report.html_container">
+				<t t-raw="0" />
+			</t>
+			
 			<xpath expr="//head" position="inside">
 				<t t-call="eq_plain_reports.style_plain" />
-			</xpath>
-		</template>
-
-		<template id="html_container_plain" inherit_id="report.html_container">
-			<xpath expr="." position="inside">
-				<t t-call="eq_plain_reports.layout">
-					<t t-raw="0" />
-				</t>
 			</xpath>
 		</template>
 	</data>
